# sse-agent

./: Cargo.toml
examples/: client.rs  server.rs
src/: body.rs  error.rs  event.rs  lib.rs  parser.rs
tests/: simple.rs
