[package]
name = "sse-agent"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = """
Converts a stream of Bytes into a Stream of SSE Events
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures-core = "0.3.17"
memchr = "2.4.1"


[dev-dependencies]
futures-util = "0.3.17"
hyper = { version = "0.14.13", default-features = false, features = [ "stream" ]}
tokio = { version = "1.12", default-features = false, features = [ "macros", "rt-multi-thread" ] }
axum = { version = "0.2.8", default-features = false }
rand_core = { version = "0.6.3", default-features = false, features = [ "getrandom" ] }
reqwest = { version = "0.11.6", default-features = false, features = [ "stream" ] }
